--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "jest --coverage",
     "lint": "eslint src test"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -20,13 +19,15 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "jest": "^23.3.0",
-    "jest-cli": "^23.3.0"
+    "jest-cli": "^23.3.0",
+    "jest-extended": "^0.11.2"
   },
   "engines": {
     "node": ">= 8.x.x"
   },
   "jest": {
     "coverageDirectory": "../coverage",
+    "setupTestFrameworkScriptFile": "jest-extended",
     "testEnvironment": "node",
     "rootDir": "./src",
     "roots": [
