--- a/package.json
+++ b/package.json
@@ -19,16 +19,13 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "jest": "^23.3.0",
-    "jest-cli": "^23.3.0",
-    "jest-extended": "^0.11.2",
-    "mem": "^4.0.0"
+    "jest-cli": "^23.3.0"
   },
   "engines": {
     "node": ">= 8.x.x"
   },
   "jest": {
     "coverageDirectory": "../coverage",
-    "setupTestFrameworkScriptFile": "jest-extended",
     "testEnvironment": "node",
     "rootDir": "./src",
     "roots": [
